# polycubes

./: CMakeLists.txt  blocks.txt  groupGenerators.cpp  groupGenerators.h  groups.cpp  groups.h  main.cpp  makefile  poly.h  relative.cpp  relative.h  test.cpp  test.h  tetris.txt  timings.md
include/: Tet.h  critical.h  groups.h  poly.h  relative.h
src/: Tet.cpp  groups.cpp  relative.cpp
tests/: test.cpp
